Fix z-index so that nav is in front of video

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -90,6 +90,7 @@ nav label {
 }
 
 nav {
+  z-index: 1000;
   width: 100vw;
   margin: 0;
   box-sizing: border-box;
